--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required(VERSION 2.8)
+﻿cmake_minimum_required(VERSION 3.5)
 project("Elite")
 
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/build/conanbuildinfo.cmake)
@@ -14,6 +14,7 @@ SET(VERSION_PATCH "0")
 
 # SET (CMAKE_BUILD_TYPE Release) # 默认构建Debug模式
 
+set (CMAKE_CXX_STANDARD 14)
 include_directories(src include)
 
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
