--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,13 +29,31 @@ SET(VERSION_PATCH "0")
 # llvm_map_components_to_libnames(llvm_libs
 # 	support core irreader mc mcjit bitwriter x86codegen target)
 
-find_package(BISON)
-find_package(FLEX)
+
+## Flex/Bison configuration 
+find_package(BISON REQUIRED)
+find_package(FLEX REQUIRED)
+
+if (WIN32)
+    set (ADDITIONAL_FLEX_FLAGS "--wincompat")
+else()
+    set (ADDITIONAL_FLEX_FLAGS "")
+endif()
+FLEX_TARGET(SCANNER ${CMAKE_CURRENT_SOURCE_DIR}/src/Parser/scanner.l
+${CMAKE_CURRENT_BINARY_DIR}/scanner.cpp DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/scanner.h COMPILE_FLAGS ${ADDITIONAL_FLEX_FLAGS})
+BISON_TARGET(PARSER ${CMAKE_CURRENT_SOURCE_DIR}/src/Parser/parser.y
+${CMAKE_CURRENT_BINARY_DIR}/parser.cpp COMPILE_FLAGS "-d -v")
+ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)
 
 # 设定编译器版本和相关目录
 
 set (CMAKE_CXX_STANDARD 14)
 add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0) ## It's important for gtest
+
+SET (CMAKE_CXX_FLAGS_DEBUG "-g -D_GLIBCXX_DEBUG")
+SET (CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG")
+SET (CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
+SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
 
 include_directories(src include header_libs)
 
@@ -53,9 +71,8 @@ file(GLOB source_files
 )
 list(REMOVE_ITEM source_files  ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
-
 # 生成库目标
-add_library(${PROJECT_NAME} ${source_files})
+add_library(${PROJECT_NAME} ${source_files} ${BISON_PARSER_OUTPUTS} ${FLEX_SCANNER_OUTPUTS})
 add_executable(${PROJECT_NAME}_exe ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 # 链接库
 target_link_libraries(${PROJECT_NAME}_exe ${PROJECT_NAME} ${llvm_libs})
